# resend-examples

./: .env  .gitignore  LICENSE.md  readme.md
astro-resend-examples/: .gitignore  README.md
bun-resend-examples/: .env.example  .gitignore  README.md
dotnet-resend-examples/: .gitignore  Program.cs  README.md  dotnet-resend-examples.csproj
elixir-resend-examples/: .gitignore  README.md  mix.exs
express-resend-examples/: .gitignore  README.md
go-resend-examples/: .gitignore  README.md  go.mod
hono-resend-examples/: README.md
java-resend-examples/: .gitignore  README.md  pom.xml
laravel-resend-examples/: .env.example  .gitignore  README.md  composer.json
nuxt-resend-examples/: .gitignore  README.md
php-resend-examples/: .env.example  .gitignore  README.md  composer.json
python-resend-examples/: .env.example  .gitignore  README.md  requirements.txt
redwoodjs-resend-examples/: .gitignore  README.md
remix-resend-examples/: .gitignore  README.md
ruby-resend-examples/: .env.example  .gitignore  Gemfile  README.md
rust-resend-examples/: .gitignore  Cargo.toml  README.md
rust-resend-examples/axum_app/src/: main.rs
rust-resend-examples/examples/: audiences.rs  basic_send.rs  batch_send.rs  domains.rs  double_optin_subscribe.rs  double_optin_webhook.rs  inbound.rs  prevent_threading.rs  scheduled_send.rs  with_attachments.rs  with_cid_attachments.rs  with_template.rs
sveltekit-resend-examples/: .env.example  .gitignore  README.md
tanstack-resend-examples/: .env.example  README.md
with-attachments-content/: .gitignore  .pnp.cjs  package.json  (+1 more)
(+672 files in other folders)
